# flinch

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY-REVIEW.md  pyproject.toml
flinch/: __init__.py  app.py  classifier.py  coach.py  db.py  hh_import.py  lexical.py  llm.py  metrics.py  models.py  playbook.md  prolific.py  publication.py  rate_limiter.py  rater.py  reporting.py  runner.py  seed.py  stat_runner.py  stats.py  target.py
flinch/probes/: example-probes.md
flinch/seeds/: policies.py  strategies.py
flinch/static/: api.js  app.js  components.js  experiment.js  index.html  render.js  settings.js  shortcuts.js  state.js
flinch/strategies/: default-strategies.md
flinch/themes/: __init__.py  presets.md
flinch/variants/: lexical-complexity.md  violence-framing.md
scripts/: build-installer.ps1  bundle-resources.py  download_hh_prompts.py  generate-icon.py  verify-phase1.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api_keys.rs  crash.rs  error.rs  lib.rs  main.rs  sidecar.rs
src-tauri/src/bootstrap/: errors.rs  events.rs  mod.rs  pbs.rs  pip.rs  venv.rs
tests/: test_experiment_pipeline.py
ui/: index.html  splash.js  styles.css
