[package]
name = "flinch"
version = "0.8.0"
edition = "2021"
description = "AI content restriction consistency research"
license = "MIT"

[[bin]]
name = "flinch"
path = "src/main.rs"

[features]
# Default: devtools shipped in all builds so the in-app "Open DevTools" button works.
# Build with `--no-default-features` to strip devtools from the binary entirely.
default = ["devtools"]
devtools = ["tauri/devtools"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
portpicker = "0.1"
sha2 = "0.10"
tar = "0.4"
flate2 = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
which = "7"
once_cell = "1"
regex = "1"
os_info = "3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Security_Credentials",
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
